# codeart-binexplore

./: .eslintignore  .eslintrc.json  .gitignore  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bugreport.yml  config.yml
.github/workflows/: build-vsix.yml  ci-main-linux.yml  ci-main-mac.yml  ci-main-win.yml  ci-main.win.yml
examples/: README.md  mmul_debug.objdump  mmul_debug_debugging.objdump  mmul_debug_sources.txt  mmul_release.objdump  mmul_release_debugging.objdump  vector_debug  vector_debug.objdump  vector_debug_debugging.objdump  vector_debug_sources.txt  vector_release  vector_release.objdump  vector_release_debugging.objdump
examples/src/: main.cc  mmul.cc  vector.h
src/: explore.ts  extension.ts  preview.ts
src/objdump/: dumper.ts
src/test/objectFilesGenerator/executables/: main
syntaxes/: language-uc-assembly.tmLanguage
test/: dumper.test.ts  extension.test.ts
test/objectFilesGenerator/: CMakeLists.txt
